build: remove AspectJ as depent