@@ -1,27 +1,10 @@
 plugins {
 	id 'application'
 	id 'java'
-	id("io.freefair.aspectj.post-compile-weaving") version "9.0.0"
 }
 
 application {
     mainClass = 'me.kotsu.Main'
-}
-
-run {
-    doFirst {
-        def weaverJar = configurations.runtimeClasspath.find { it.name.contains('aspectjweaver') }
-        if (weaverJar == null) {
-            throw new GradleException("aspectjweaver.jar not found in runtimeClasspath")
-        }
-        //jvmArgs "-javaagent:${weaverJar.absolutePath}"
-        jvmArgs(
-            "-javaagent:${weaverJar.absolutePath}",
-            "--add-opens=java.base/java.lang=ALL-UNNAMED",
-            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
-            "--add-opens=java.base/sun.misc=ALL-UNNAMED"
-        )
-    }
 }
 
 group = 'me.kotsu'
@@ -61,10 +44,6 @@ dependencies {
 	
 	testCompileOnly("org.projectlombok:lombok:1.18.42")
 	testAnnotationProcessor("org.projectlombok:lombok:1.18.42")
-	
-	implementation "org.aspectj:aspectjrt:1.9.24"
-    implementation "org.aspectj:aspectjweaver:1.9.24"
-    implementation "org.aspectj:aspectjtools:1.9.24"
 }
 
 tasks.named('test') {
